--- a/sgs2/get_rooted.html
+++ b/sgs2/get_rooted.html
@@ -18,13 +18,13 @@
       <br>
       <br>
     </p>
-    <hr checked="true"><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;"><span
-        style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;">今
+    <hr checked="true"><span style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
+        style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">今
         のところ残念ながらSGS2はそのままではroot取りアプリではroot化不可なので、カーネルとか書き換える必要がある。<br>
         もっと安全な方法があればより確実なんですが。。。<br>
         <br>
       </span></span>
-    <div><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;">震
+    <div><span style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">震
         える文鎮化への道は次の通り</span></div>
     <div><br>
       <hr checked="true">１．ODIN3かHeimdallを何処からか入手</div>
@@ -71,6 +71,13 @@
     <div><br>
     </div>
     <div><br>
+      <hr checked="true">一応上記の方法で行けると思いますが、、<br>
+      もーなんかよーわからん。。。というひとはこの動画を見てください。<br>
+      <br>
+      <iframe src="http://www.youtube.com/embed/1_lsLyywJdY" allowfullscreen=""
+        frameborder="0" height="349" width="560"></iframe> <br>
+      <br>
+      <br>
       <hr checked="true">[おまけ]</div>
     <div>rootになれば手作業でSDカードへバックアップするもよしよし。</div>
     <div><br>
@@ -92,17 +99,16 @@
         #dd if=/dev/block/mmcblk0p8 of=/sdcard/backup/mmcblk0p8.img
         bs=4096<br>
         <span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: monospace; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">#dd
+
           if=/dev/block/mmcblk0p9 of=/sdcard/backup/mmcblk0p9.img
           bs=4096<br>
-        </span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
-            style="font-family: monospace;">#dd if=/dev/block/mmcblk0p10
-            of=/sdcard/backup/mmcblk0p10.img bs=4096</span></span><span
-          style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;"><br>
+        </span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">#dd
+          if=/dev/block/mmcblk0p10 of=/sdcard/backup/mmcblk0p10.img
+          bs=4096</span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><br>
         </span>#dd if=/dev/block/mmcblk0p12
         of=/sdcard/backup/mmcblk0p12.img bs=4096<br>
         #tar -czvf /sdcard/backup/data.tar.gz /data</code></div>
-    <code>
-    </code><br>
+    <code> </code><br>
     <code><code><code><code><code><code><code><code><code><code><code><code><code><code><code><code><br>
                                   </code></code></code></code></code></code></code></code></code></code></code></code></code></code></code></code>
   </body>
