--- a/sgs2/index.html
+++ b/sgs2/index.html
@@ -24,8 +24,30 @@
     <p> [カーネル周り]<br>
       ・<a checked="true" href="build_kernel.html">公式カーネルのビルドなど</a></p>
     <br>
+    <p>[ツールなどへのリンク]</p>
+    <p>・<a href="https://opensource.samsung.com">公式カーネル</a> <span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"></span><br>
+      ・<a href="http://www.codesourcery.com/sgpp/lite/arm/portal/release1033">ツー
+        ルチェイン</a>&nbsp; <br>
+      ・<a href="http://forum.xda-developers.com/attachment.php?attachmentid=581913&amp;d=1304094576">ODIN3-v185</a>
+      (要xdaアカウント) <br>
+      ・<a href="http://forum.xda-developers.com/attachment.php?attachmentid=581915&amp;d=1304094698">XWKDD_insecure.tar</a>
+      (要xdaアカウント) <br>
+      ・<a href="https://github.com/GalaxySII/initramfs-galaxysii.git">素の
+        initramfs</a>&nbsp;&nbsp; <br>
+      ・<a href="https://github.com/project-voodoo/galaxysii-initramfs-modified">ちょっ
+        と変更済みのinitramfs</a>&nbsp; <br>
+      ・<a checked="true" href="http://www.glassechidna.com.au/products/heimdall/">Heimdall
+      </a>(linuxとかコマンドラインで動くODIN3)<br>
+    </p>
+    <p> <br>
+    </p>
     <p><br>
     </p>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
+    <p> </p>
     <p>以下メモ書き。。。<br>
     </p>
     <hr checked="true" style="margin-top: 17px;"> [公式カーネルの場所]<br>
@@ -90,6 +112,85 @@
       PROTECTED_WITH_PASSWORD </code><br>
     <br>
     mmcblk1はスロットのSDカードかな？<br>
+    <br>
+    http://forum.xda-developers.com/showthread.php?t=1104139の情報を参考にあわせてみ
+    ると見えてくるかも？？<br>
+    <br>
+    <code style="font-family: monospace;">Partition Name
+      START&nbsp;&nbsp;&nbsp; END&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      LEN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; LEN in BLK&nbsp;&nbsp; Partition
+      <br>
+      GANG&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      00000000 00000000
+      <br>
+      BOOT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      00000000 00000000
+      <br>
+      EFS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      00000000 00000000 013FFFFF 000000A0&nbsp;&nbsp;&nbsp;&nbsp; 0p1
+      <br>
+      SBL1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      00000000 00000000 0013FFFF 0000000A&nbsp;&nbsp;&nbsp;&nbsp; 0p2
+      <br>
+      SBL2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      00000000 00000000 0013FFFF 0000000A&nbsp;&nbsp;&nbsp;&nbsp; 0p3
+      <br>
+      PARAM &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 00000000 00000000 007FFFFF
+      00000040&nbsp;&nbsp;&nbsp;&nbsp; 0p4
+      <br>
+      KERNEL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 00000000
+      00000000 007FFFFF 00000040&nbsp;&nbsp;&nbsp;&nbsp; 0p5
+      <br>
+      RECOVERY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 00000000 00000000
+      007FFFFF 00000040 &nbsp; &nbsp; 0p6
+      <br>
+      CACHE&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      00000000 00000000 063FFFFF 00000320 &nbsp; &nbsp; 0p7
+      <br>
+      MODEM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      00000000 00000000 00FFFFFF 00000080 &nbsp; &nbsp; 0p8
+      <br>
+      FACTORYFS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 00000000 00000000 1FFFFFFF
+      00001000 &nbsp; &nbsp; 0p9
+      <br>
+      DATAFS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 00000000
+      00000000 007FFFFF 00000040 &nbsp; &nbsp; 0p10
+      <br>
+      UMS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      00000000 00000000 E07FFFFF 00007040 &nbsp; &nbsp; 0p11
+      <br>
+      HIDDEN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 00000000
+      00000000 001FFFFF 00000010&nbsp;&nbsp;&nbsp;&nbsp; 0p12<br>
+    </code><br>
+    なので、パーティションの割り当ては次のようになる<br>
+    <br>
+    <code> mmcblk0p1 EFS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; /efs
+      imeiとか入ってるので色々重要<br>
+      mmcblk0p2 SBL1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      Jig挿したときにココから復旧するらしい？<br>
+      mmcblk0p3 SBL2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </code><code>Jig
+      挿したときにココから復旧するらしい？</code><code><br>
+      mmcblk0p4 PARAM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; カーネル起動パラメータ？？<br>
+      mmcblk0p5 KERNEL &nbsp; &nbsp; カーネル＋initramfs本体<br>
+      mmcblk0p6 RECOVERY &nbsp; 復旧用？<br>
+      mmcblk0p7 CACHE &nbsp; &nbsp;&nbsp; /cache /dev/mapper/cache cache
+      ext4 NOT_PROTECTED <br>
+      mmcblk0p8 MODEM &nbsp; &nbsp;&nbsp; モデムコード <br>
+    </code><code>mmcblk0p9 FACTORYES&nbsp; /system<br>
+    </code><code>mmcblk0p10 DATAFS &nbsp;&nbsp; /data</code><code>&nbsp;
+      <br>
+      mmcblk0p11 UMS&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; /sdcard <br>
+      mmcblk0p12 HIDDEN &nbsp; &nbsp; /preload<br>
+    </code><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr checked="true" style="margin-top: 17px;">[ODIN3って何？]<br>
+    <br>
+    何でしょうね。<br>
+    おでんさんがアレだしWinでしか動かないので、これを奇特な方がスクラッチビルドしなおしたものが<a checked="true" href="http://www.glassechidna.com.au/products/heimdall/">Heimdall
+    </a>みたい。<br>
     <br>
     <br>
   </body>
