fix wrong link...

--- a/sgs2/build_kernel.html
+++ b/sgs2/build_kernel.html
@@ -90,10 +90,12 @@
     <h4>７．とりあえず何処からかinitramfsの大元をどこからか取得する。</h4>
     XDAの使ったほうがよいかも。<br>
     <br>
-    <a href="https://github.com/GalaxySII/initramfs-galaxysii.git">https://github.com/GalaxySII/initramfs-galaxysii.git</a>&nbsp;
+    <a checked="true" href="https://github.com/GalaxySII/initramfs-galaxysii">https://github.com/GalaxySII/initramfs-galaxysii</a>&nbsp;
+
 
     ：特になにもいじっていないinitramfs。<br>
     <a href="https://github.com/project-voodoo/galaxysii-initramfs-modified">https://github.com/project-voodoo/galaxysii-initramfs-modified</a>&nbsp;
+
 
     ：suとsuperuser.apkが初期にコピーされるようになってる<br>
     &nbsp; <br>
