--- a/sgs2/index.html
+++ b/sgs2/index.html
@@ -32,8 +32,8 @@
       (要xdaアカウント) <br>
       ・<a href="http://forum.xda-developers.com/attachment.php?attachmentid=581915&amp;d=1304094698">XWKDD_insecure.tar</a>
       (要xdaアカウント) <br>
-      ・<a href="https://github.com/GalaxySII/initramfs-galaxysii.git">素の
-        initramfs</a>&nbsp;&nbsp; <br>
+      ・<a checked="true" href="https://github.com/GalaxySII/initramfs-galaxysii">素
+        のinitramfs</a>&nbsp;&nbsp; <br>
       ・<a href="https://github.com/project-voodoo/galaxysii-initramfs-modified">ちょっ
         と変更済みのinitramfs</a>&nbsp; <br>
       ・<a checked="true" href="http://www.glassechidna.com.au/products/heimdall/">Heimdall
