--- a/sgs2/get_rooted.html
+++ b/sgs2/get_rooted.html
@@ -20,7 +20,8 @@
     </p>
     <hr checked="true"><span style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
         style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">今
-        のところ残念ながらSGS2はそのままではroot取りアプリではroot化不可なので、カーネルとか書き換える必要がある。<br>
+        のところ残念ながらSGS2はそのままではroot取りアプリではroot化不可なので、カーネルとか書き換える必要があります。<br>
+        現在はピュアなinitramが取れないですし、なにも手が加わってないZimageも無いのでかなりの危険を伴います。<br>
         もっと安全な方法があればより確実なんですが。。。<br>
         <br>
       </span></span>
@@ -33,8 +34,8 @@
     <div><br>
       <hr checked="true">２．Insecureなカーネル(initram付きなカーネル)を作るか何処からか入手</div>
     <div>&nbsp;&nbsp; &nbsp;（<span style="font-weight: bold;">注：国際版では
-        XWKDD_insecure.tarでOKですが、日本版では微妙にローカライズされているはずなので、多分カーネルをコンパイルしな
-        おして.koを合わせないとまずいかも？？</span>）</div>
+        XWKDD_insecure.tarでOKですが、日本版では微妙にローカライズされているはずなので、多分カーネルをコンパイルしなおして.koを合
+        わせないとまずいです。そのほかにもinitramもピュアなものから吸い上げないと不味いかも。。。文鎮化してもイイ人はどうぞ</span>）</div>
     <div><br>
     </div>
     <div><br>
@@ -72,7 +73,7 @@
     <div><br>
     </div>
     <div><br>
-      <hr checked="true">一応上記の方法で行けると思いますが、、<br>
+      <hr checked="true">一応上記の方法で行けると思いますが、、（少なくとも国際版だけでは）<br>
       えっ何言ってるかわからないとかいうひとは素直に諦めるか、この動画を見て流れをつかんでください。<br>
       <br>
       <iframe src="http://www.youtube.com/embed/1_lsLyywJdY" allowfullscreen=""
@@ -102,17 +103,18 @@
         <span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: monospace; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">#dd
 
 
+
+
           if=/dev/block/mmcblk0p9 of=/sdcard/backup/mmcblk0p9.img
           bs=4096<br>
         </span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">#dd
+
+
 
           if=/dev/block/mmcblk0p10 of=/sdcard/backup/mmcblk0p10.img
           bs=4096</span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><br>
         </span>#dd if=/dev/block/mmcblk0p12
         of=/sdcard/backup/mmcblk0p12.img bs=4096<br>
         #tar -czvf /sdcard/backup/data.tar.gz /data</code></div>
-    <code> </code><br>
-    <code><code><code><code><code><code><code><code><code><code><code><code><code><code><code><code><br>
-                                  </code></code></code></code></code></code></code></code></code></code></code></code></code></code></code></code>
   </body>
 </html>
