--- a/sgs2/index.html
+++ b/sgs2/index.html
@@ -25,7 +25,7 @@
       ・<a checked="true" href="build_kernel.html">公式カーネルのビルドなど</a></p>
     <br>
     <p>[謎のJigについて]<br>
-      ・Jigの作成方法(予定)<br>
+      ・<a href="create_jig.html">Jigの作成方法</a><br>
     </p>
     <br>
     <p>[ツールなどへのリンク]</p>
@@ -41,6 +41,7 @@
       ・<a href="https://github.com/project-voodoo/galaxysii-initramfs-modified">ちょっ
         と変更済みのinitramfs</a>&nbsp; <br>
       ・<a checked="true" href="http://www.glassechidna.com.au/products/heimdall/">Heimdall
+
 
       </a>(linuxとかコマンドラインで動くODIN3)<br>
     </p>
@@ -73,10 +74,12 @@
     <div><br>
     </div>
     <div><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;">Diff
+
         を取ったところ、基本的に同じものだった。<br>
         なので、今のところはどっちを使っても良い。</span></div>
     <div>ソースファイルの追加のみで変更はなし。</div>
     <div><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;">XDA
+
         のほうが何個かファイルが追加されている程度</span></div>
     <div><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;"><br>
       </span></div>
@@ -134,8 +137,10 @@
     <div><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;"><span
           style="border-collapse: collapse; color: rgb(68, 68, 68); font-family: Arial, 'Trebuchet MS', sans-serif; font-size: 13px; line-height: 18px; text-align: left;"><strong
             style="background-image: initial; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: transparent; border-top-width: 0px; border-right-width: 0px; border-bottom-width: 0px; border-left-width: 0px; border-style: initial; border-color: initial; margin-top: 0px; margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 0px; vertical-align: baseline;">PDA/Phone/CSC
+
             Version(Display Current Firmware)</strong>: *#1234#<br>
           <strong style="background-image: initial; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: transparent; border-top-width: 0px; border-right-width: 0px; border-bottom-width: 0px; border-left-width: 0px; border-style: initial; border-color: initial; margin-top: 0px; margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 0px; vertical-align: baseline;">Product
+
             Code</strong>: *2767*4387264636#<br>
           <br>
         </span></span></div>
@@ -182,6 +187,7 @@
       00000000 00000000 <br>
       EFS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
+
       00000000 00000000 013FFFFF 000000A0&nbsp;&nbsp;&nbsp;&nbsp; 0p1 <br>
       SBL1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       00000000 00000000 0013FFFF 0000000A&nbsp;&nbsp;&nbsp;&nbsp; 0p2 <br>
@@ -203,6 +209,7 @@
       00000000 007FFFFF 00000040 &nbsp; &nbsp; 0p10 <br>
       UMS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
+
       00000000 00000000 E07FFFFF 00007040 &nbsp; &nbsp; 0p11 <br>
       HIDDEN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 00000000
       00000000 001FFFFF 00000010&nbsp;&nbsp;&nbsp;&nbsp; 0p12<br>
@@ -214,6 +221,7 @@
       mmcblk0p2 SBL1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       Jig挿したときにココから復旧するらしい？<br>
       mmcblk0p3 SBL2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </code><code>Jig
+
 
       挿したときにココから復旧するらしい？</code><code><br>
       mmcblk0p4 PARAM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; カーネル起動パラメータ？？<br>
@@ -231,6 +239,7 @@
     <br>
     <div>
       <hr checked="true" style="margin-top: 17px;"><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;">[jig
+
         の謎と答え]</span></div>
     <div><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;"><br>
         （あとでまとめます）<br>
@@ -244,6 +253,7 @@
     <div><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;"><br>
       </span></div>
     <div><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;">GalazyS
+
         とS2のUSBポートで使われているのが、FSA9280というチップ。</span></div>
     <div><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium;">こ
         れはUSB、オーディオ、UART(COMみたいなもの)の３入力を１つ出力に切り替えるセレクタIC。</span></div>
@@ -294,6 +304,7 @@
     <br>
     何でしょうね。<br>
     おでんさんがアレだしWinでしか動かないので、これを奇特な方がスクラッチビルドしなおしたものが<a checked="true" href="http://www.glassechidna.com.au/products/heimdall/">Heimdall
+
 
     </a>みたい。<br>
     <br>
