--- a/sgs2/create_jig.html
+++ b/sgs2/create_jig.html
@@ -36,7 +36,7 @@
       ・３００kΩ抵抗 １つ<br>
       ・1kΩ抵抗 １つ<br>
       ・配線(必要に応じて)<br>
-      ・スルーホース基板(必要に応じて)<br>
+      ・スルーホール基板(必要に応じて)<br>
       ・ケース(必要に応じて)<br>
       <br>
       テスター持たないものは工作するべからずです。テスターは必ず用意しましょう。<br>
@@ -104,7 +104,7 @@
       <img alt="" src="jig_bun1.JPG"><br>
       実はこれ、用途不明とかかかれてました。元々はNokiaの携帯で使う奴みたいです。<br>
       <br>
-      で、ここからMicroBオスだけを回収して、スルーホース基板に抵抗を半田付けして最終的にコネクタと基板を結線して<br>
+      で、ここからMicroBオスだけを回収して、スルーホール基板に抵抗を半田付けして最終的にコネクタと基板を結線して<br>
       <img alt="" src="jig_bun2.JPG"><img alt="" src="jig_bun3.JPG"><br>
       な感じとなりました。<br>
       <br>
