--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     ソースに関しては保証しませんので、そのあたり注意してください。
     <p>
       [メモ関連]<br>
-      <a href="sgs2/index.html">・GalaxyS 2 (GT-I9100)メモ</a><br>
+      <a href="">・GalaxyS 2 メモ(書き直し中)</a><br>
     </p>
     <br>
     <p>
