--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <br>
     <p>
       [雑多]<br>
+      <a href="https://github.com/chromabox/initrampicker">・initrampicker</a><br>
+      zImageからinitramfsを抽出するプログラム。<br>
+      何かに使うために作成。<br>
+      <br>
       <a href="https://github.com/chromabox/macget">・macget</a><br>
       Windows用の簡単なMACアドレス取得等のサンプル。<br>
       プログラム内でどうしてもMACアドレスが知りたいときの参考にしてください。<br>
