--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     ソースに関しては保証しませんので、そのあたり注意してください。
     <p>
       [メモ関連]<br>
-      <a href="">・GalaxyS 2 メモ(書き直し中)</a><br>
+      <a href="i9100memo/index.html">・GT-I9100メモ</a><br>
     </p>
     <br>
     <p>
