--- a/i9100memo/create_jig.html
+++ b/i9100memo/create_jig.html
@@ -113,7 +113,8 @@
       <img alt="" src="jig_complete.JPG"><br>
       OKですね。<br>
       <br>
-      チェックしたら早速挿しましょう。
+      チェックしたら早速挿しましょう。<br>
+      <img alt="" src="jig_using.JPG"><br>
       <br>
       実験成功ですね。<br>
       <br>
