--- a/i9100memo/index.html
+++ b/i9100memo/index.html
@@ -27,7 +27,7 @@
     <br>
     <p>[謎のJigについて]<br>
       ・<a href="create_jig.html">Jigの作成方法</a><br>
-      ・<a href="create_jig2.html">小型100円Jigの作成方法(書き直し中)</a><br>
+      ・<a href="create_jig2.html">小型100円Jigの作成方法</a><br>
       <!-- ・<a href="jig_howto.html">Jigの動作原理と秘密</a><br> -->
     </p>
     <br>
