--- a/i9100memo/build_kernel.html
+++ b/i9100memo/build_kernel.html
@@ -29,6 +29,8 @@
     <br>
     GT-I9100で検索。たまにこっそり更新されてるので注意。 <br>
     <br>
+    私が変更して使っているソースは<a href="http://chromabox.github.com/i9100_kernel_chroma/">コレ</a>を見てください。<br>
+    <br>
     <hr checked="true">
     <h4>２．落としたカーネルソースともども展開する </h4>
     <hr checked="true">
