--- a/i9100memo/index.html
+++ b/i9100memo/index.html
@@ -22,9 +22,10 @@
     </p>
     <p> </p>
     <p> [カーネル周り]<br>
-      ・<a checked="true" href="build_kernel.html">公式カーネルのビルドなど</a></p>
+      ・<a checked="true" href="build_kernel.html">公式カーネルのビルドなど</a><br>
+      ・<a checked="true" href="http://chromabox.github.com/i9100_kernel_chroma/">i9100_kernel(Chromabox版)</a><br>
       <!-- ・<a checked="true" href="memorymap.html">メモリマップの調査</a></p> -->
-    <br>
+    </p>
     <p>[謎のJigについて]<br>
       ・<a href="create_jig.html">Jigの作成方法</a><br>
       ・<a href="create_jig2.html">小型100円Jigの作成方法</a><br>
