--- a/i9100memo/index.html
+++ b/i9100memo/index.html
@@ -24,7 +24,7 @@
     <p> [カーネル周り]<br>
       ・<a checked="true" href="build_kernel.html">公式カーネルのビルドなど</a><br>
       ・<a checked="true" href="http://chromabox.github.com/i9100_kernel_chroma/">i9100_kernel(Chromabox版)</a><br>
-      <!-- ・<a checked="true" href="memorymap.html">メモリマップの調査</a></p> -->
+      ・<a checked="true" href="partition.html">パーティション周りの調査</a></p>
     </p>
     <p>[謎のJigについて]<br>
       ・<a href="create_jig.html">Jigの作成方法</a><br>
