write orgkernel text..

--- a/i9100memo/index.html
+++ b/i9100memo/index.html
@@ -23,8 +23,9 @@
     <p> </p>
     <p> [カーネル周り]<br>
       ・<a checked="true" href="build_kernel.html">公式カーネルのビルドなど</a><br>
-      ・<a checked="true" href="http://chromabox.github.com/i9100_kernel_chroma/">i9100_kernel(Chromabox版)</a><br>
+      <!--・<a checked="true" href="http://chromabox.github.com/i9100_kernel_chroma/">i9100_kernel(Chromabox版)</a><br> -->
       ・<a checked="true" href="partition.html">パーティション周りの調査</a></p>
+      ・<a checked="true" href="orgkernel.html">製品版と公開されているカーネルとの違いについて</a></p>
     </p>
     <p>[謎のJigについて]<br>
       ・<a href="create_jig.html">Jigの作成方法</a><br>
@@ -36,8 +37,6 @@
     <p>・<a href="https://opensource.samsung.com">公式カーネル</a> <span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Tahoma; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"></span><br>
       ・<a href="http://www.codesourcery.com/sgpp/lite/arm/portal/release1033">ツールチェイン</a>&nbsp; <br>
       ・<a href="http://forum.xda-developers.com/attachment.php?attachmentid=581913&amp;d=1304094576">ODIN3-v185</a>
-      (要xdaアカウント) <br>
-      ・<a href="http://forum.xda-developers.com/attachment.php?attachmentid=581915&amp;d=1304094698">XWKDD_insecure.tar</a>
       (要xdaアカウント) <br>
       ・<a checked="true" href="https://github.com/GalaxySII/initramfs-galaxysii">素のinitramfs</a>&nbsp;&nbsp; <br>
       ・<a href="https://github.com/project-voodoo/galaxysii-initramfs-modified">ちょっと変更済みのinitramfs</a>&nbsp; <br>
