add jig someone..

--- a/i9100memo/index.html
+++ b/i9100memo/index.html
@@ -31,6 +31,8 @@
       ・<a href="create_jig.html">Jigの作成方法</a><br>
       ・<a href="create_jig2.html">小型100円Jigの作成方法</a><br>
       ・<a href="jig_howto.html">Jigの動作原理と秘密</a><br>
+      ・<a href="jig_test.html">GT-I9100用のJIGについて、他抵抗値の実験と調査</a><br>
+      ・<a href="jig_uart.html">GT-I9100用のUART出力JIGについて</a><br>
     </p>
     <br>
     <p>[ツールなどへのリンク]</p>
