--- a/index.html
+++ b/index.html
@@ -1,37 +1,16 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html
-  xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja">
   <head>
     <meta http-equiv="content-language" content="ja">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="start index" href="./">
-    <title>chromabox Githubページ</title>
+    <title>Githubページ</title>
   </head>
   <body>
-    <h2>chromaboxの物置小屋</h2>
-    わたしのソースツリー全体は<a href="https://github.com/chromabox">こちら</a>からお願いします。<br>
-    ソースに関しては保証しませんので、そのあたり注意してください。
     <p>
-      [メモ関連]<br>
-      <a href="i9100memo/index.html">・GT-I9100メモ</a><br>
-    </p>
-    <br>
-    <p>
-      [雑多]<br>
-      <a href="https://github.com/chromabox/initrampicker">・initrampicker</a><br>
-      zImageからinitramfsを抽出するプログラム。<br>
-      何かに使うために作成。<br>
-      <br>
-      <a href="https://github.com/chromabox/macget">・macget</a><br>
-      Windows用の簡単なMACアドレス取得等のサンプル。<br>
-      プログラム内でどうしてもMACアドレスが知りたいときの参考にしてください。<br>
-      <br>
-      <a href="https://github.com/chromabox/winps">・winps</a><br>
-      Linuxのpsもどきプログラム<br>
-      Windows XPでは手軽にコマンドで調べられなかった気がするので作ったと思う。<br>
-      PSだけじゃナンなので、プロセスが使っているモジュールも出すようにして、モジュールのフルパスも出すようにした。<br>
-      ちゃんとしたDLLを読んでるかチェックに使えるかも。<br>
-      <br>
+    ここにはなにもないです<br>
+    blogみたいなのは<a href="https://chromabox.github.io/140m/">こちら</a>へどうぞ。
     </p>
   </body>
 </html>
